template lang icon, added alt

--- a/django_pages/templates/default2/base_menu.html
+++ b/django_pages/templates/default2/base_menu.html
@@ -39,7 +39,7 @@
 
                 {% if lang.flag %}
 
-                    <img class="lang_flag" src="{{ MEDIA_URL }}{{ lang.flag }}">
+                    <img class="lang_flag" src="{{ MEDIA_URL }}{{ lang.flag }}" alt="language_image_icon">
 
                 {% endif %}
 
