--- a/django_pages/templates/default/base_header.html
+++ b/django_pages/templates/default/base_header.html
@@ -10,7 +10,7 @@
 
         {% if lang.flag %}
 
-        <img class="lang_flag" src="{{ MEDIA_URL }}{{ lang.flag }}">
+        <img class="lang_flag" src="{{ MEDIA_URL }}{{ lang.flag }}" alt="language_flag_icon">
 
         {% endif %}
 
