removed lightbox, commited default3 style, fixed template bug

--- a/django_pages/templates/default/base_static.html
+++ b/django_pages/templates/default/base_static.html
@@ -2,10 +2,7 @@
 
 <!-- Load CSS -->
 
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style_default.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/lightbox.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/default/style_default.css' %}">
+
 
     <!-- Load JS -->
-
-    <script src="{% static 'js/jquery-1.7.2.min.js' %}"></script>
-    <script src="{% static 'js/lightbox.js' %}"></script>
