--- a/django_pages/templates/default2/base_static.html
+++ b/django_pages/templates/default2/base_static.html
@@ -4,15 +4,11 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/default2/bootstrap.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/default2/bootstrap-responsive.css' %}">
-    <!--<link rel="stylesheet" type="text/css" href="{% static 'css/default2/font-awesome.css' %}">-->
     <link rel="stylesheet" type="text/css" href="{% static 'css/default2/bootswatch.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/lightbox.css' %}">
 
     <!-- Load JS -->
-    <!--<script src="{% static 'js/jquery-1.7.2.min.js' %}">-->
-    <script src="{% static 'js/default2/jquery_002.js' %}"></script>
-    <script src="{% static 'js/default2/jquery.js' %}"></script>
-    <script src="{% static 'js/lightbox.js' %}"></script>
+    <script src="{% static 'js/jquery-1.10.2.min.js' %}"></script>
+    <script src="{% static 'js/jquery.smooth-scroll.min.js' %}"></script>
 
     <script src="{% static 'js/default2/bootstrap.js' %}"></script>
     <script src="{% static 'js/default2/bootswatch.js' %}"></script>
