--- a/django_pages/templates/default3/comments.html
+++ b/django_pages/templates/default3/comments.html
@@ -26,8 +26,16 @@ Comments:
             {{ site_content.form.non_field_errors }}
 
             {{ site_content.form.user.errors }}
+            {{ site_content.form.email }}
+            {{ site_content.form.fillmeup }}
+        <!-- this must be after showing the field -->
+        <script>
+            fillmeup = document.getElementById('id_fillmeup')
+            fillmeup.value = {{ site_content.form.js_check }}
+        </script>
 
             <fieldset>
+
                 <div class="control-group">
                     <label class="control-label">Nick: </label>
                     <div class="controls">
