--- a/django_pages/templates/default2/comments.html
+++ b/django_pages/templates/default2/comments.html
@@ -20,13 +20,21 @@ Comments:
         <br />
         <br />
         <br />
+        
+
         Add comment:
         <form action="#" method="POST" class="form-horizontal well">{% csrf_token %}
             
             {{ site_content.form.non_field_errors }}
 
             {{ site_content.form.user.errors }}
-
+            {{ site_content.form.email }}
+            {{ site_content.form.fillmeup }}
+        <!-- this must be after showing the field -->
+        <script>
+            fillmeup = document.getElementById('id_fillmeup')
+            fillmeup.value = {{ site_content.form.js_check }}
+        </script>
             <fieldset>
                 <div class="control-group">
                     <label class="control-label">Nick: </label>
